[package]
name = "artemis-network"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
secp256k1 = { version = "0.30.0", features = ["rand"] }
sha2 = "0.11.0-pre.4"
tokio = { version = "1.42.0", features = ["full"] }
rand = { version = "0.9.0-beta.1", features = ["std"] }
hex = "0.4.3"
chrono = "0.4.38"
serde_json = "1.0.133"
