[package]
name = "artemis-network"
version = "0.1.0"
edition = "2021"

[dependencies]
digest = "=0.10.7"
serde = { version = "1.0.215", features = ["derive"] }
clap = { version = "4.4.2", features = ["derive"] }
secp256k1 = { version = "0.30.0", features = ["rand", "recovery"] }
sha2 = "0.11.0-pre.4"
tokio = { version = "1.42.0", features = ["full"] }
rand = { version = "0.9.0-beta.1", features = ["std"] }
hex = "0.4.3"
chrono = "0.4.38"
serde_json = "1.0.133"
env_logger = "0.11.6"
log = "0.4.25"
ordered-float = "5.0.0"
actix-web = "4.9.0"
thiserror = "2.0.11"
uuid = { version = "1.13.1", features = ["v4"] }
sled = "1.0.0-alpha.124"
bincode = "1.3.3"
bytes = "1.10.0"
serde_yaml = "0.9.33"

[features]
dev = []